new connect comp, fixed mission list

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="user-profile" mat-button>User Profiles</a>
 				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
-					routerLink="about" mat-button>About</a>
+					routerLink="connect" mat-button>Get Connected </a>
 				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="missions-profile" mat-button>Missions Profile</a>
 				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
@@ -52,7 +52,7 @@
 				</button>
 				<a routerLink="home" mat-list-item>Home</a>
 				<a routerLink="user-profile" mat-list-item>User Profile</a>
-				<a routerLink="about" mat-list-item>About</a>
+				<a routerLink="connect" mat-list-item>Get Connected</a>
 				<a routerLink="missions-profile" mat-list-item>Missions Profile</a>
 				<a routerLink="login" mat-list-item>Login</a>
 				<a routerLink="signup" mat-list-item>Signup</a>
