--- a/src/app/componets/admin/admin.component.html
+++ b/src/app/componets/admin/admin.component.html
@@ -21,14 +21,14 @@
                             style="background-image: url('https://source.unsplash.com/MP0IUfwrn0A')"></div>
 
                         <h1 class="text-3xl font-bold pt-8 lg:pt-0">{{users.UserId}}. {{users.FirstName}}
-                            {{users.LastName}}</h1>
+                            {{users.LastName} </h1>
                         <div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-logo-900 opacity-25"></div>
                         <p class="pt-4 text-base font-bold flex items-center justify-center lg:justify-start">
                             <svg class="h-4 fill-current text-logo-700 pr-4" xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 20 20">
                                 <path
                                     d="M9 12H1v6a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-6h-8v2H9v-2zm0-1H0V5c0-1.1.9-2 2-2h4V2a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v1h4a2 2 0 0 1 2 2v6h-9V9H9v2zm3-8V2H8v1h4z" />
-                            </svg>{{users.Bio}}</p>
+                            </svg>{{users.Bio}} </p>
                         <p
                             class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
                             <svg class="h-4 fill-current text-logo-700 pr-4" xmlns="http://www.w3.org/2000/svg"
