--- a/src/app/componets/missions-profile/missions-profile.component.html
+++ b/src/app/componets/missions-profile/missions-profile.component.html
@@ -36,7 +36,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     Logo </label>
                 <input
                     class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-10 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
-                    id="logo" type="file" accept="image" (change)="fileChanged($event)" name="image">
+                    id="image" type="file" accept="image" (change)="fileChanged($event)" name="image">
                 <!-- <input
                     class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-10 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
                     id="logo" type="file" accept="image" [(ngModel)]="mission.image" name="image"> -->
