fixed admin page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div>
-	<mat-toolbar class="flex sticky justify-between items-center flex-wrap shadow-md bg-gray-100 p-4 w-auto z-50 top-0">
+	<mat-toolbar class="flex sticky justify-between items-center flex-wrap shadow-md bg-gray-200 p-4 w-auto z-50 top-0">
 		<mat-toolbar-row class="flex">
 			<span>
 				<div class="flex mr-6 ">
 					<a routerLink="home" routerLinkActive="active">
-						<img alt="logo" class="w-40 shadow-lg" src="../assets/images/Logo.png">
+						<img alt="logo" class="w-40 shadow-xl z-40" src="../assets/images/Logo.png">
 					</a>
 				</div>
 			</span>
@@ -12,18 +12,18 @@
 			<div fxShow="true" fxHide.lt-sm
 				class="justify-end  flex-grow lg:flex lg:items-center lg:w-auto hidden pt-6 lg:pt-0" id="nav-content">
 				<!-- The following menu items are for screen sizes above Small size -->
-				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
-					routerLink="home" mat-button>Home</a>
-				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
-					routerLink="user-profile" mat-button>User Profiles</a>
-				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
-					routerLink="connect" mat-button>Get Connected </a>
-				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
-					routerLink="missions-profile" mat-button>Missions Profile</a>
-				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
-					routerLink="login" mat-button>Login</a>
-				<a class="inline-block border rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
-					routerLink="signup" mat-button>Signup</a>
+				<a class="inline-block rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-6"
+					routerLink="home">Home</a>
+				<a class="inline-block rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-6"
+					routerLink="user-profile">User Profiles</a>
+				<a class="inline-block rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-6"
+					routerLink="connect">Get Connected </a>
+				<a class="inline-block rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-6"
+					routerLink="missions-profile">Missions Profile</a>
+				<a class="inline-block rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-6"
+					routerLink="login">Login</a>
+				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+					routerLink="signup" >Signup</a>
 			</div>
 
 
