--- a/src/app/componets/connect/connect.component.html
+++ b/src/app/componets/connect/connect.component.html
@@ -1,7 +1,7 @@
 <div class="container bg-gray-100" style="height: 600px">
-    <ul class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 gap-4">
+    <ul class="mr-4 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-6 gap-4">
         <li *ngFor="let mission of missions">
-            <div class="bg-white shadow-lg w-full m-6 rounded-lg overflow-hidden">
+            <div class="bg-white shadow-lg w-full m-3 rounded-lg overflow-hidden">
                 <!-- ORG CARD -->
                 <div class="p-4">
                     <div class="flex items-center">
