--- a/src/app/componets/sign-up/sign-up.component.html
+++ b/src/app/componets/sign-up/sign-up.component.html
@@ -14,13 +14,11 @@
     </a>
 </div> -->
 
-<form *ngIf="!isSuccessful"
-name="form"
-(ngSubmit)="f.form.valid && onSubmit()"
-#f="ngForm"
-novalidate
- class="flex flex-wrap items-center justify-center mx-auto my-8 w-full max-w-lg"  style="height:750px">
+<form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate
+    class="flex flex-wrap items-center justify-center mx-auto my-8 w-full max-w-lg" style="height:750px">
+    <!-- FIRST ROW -->
     <div class="flex flex-wrap -mx-3 mb-6">
+        <!-- FIRST NAME -->
         <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="firstName">
                 First Name
@@ -30,6 +28,7 @@ novalidate
                 id="firstName" name="firstName" type="text" placeholder="Jane" [(ngModel)]="user.firstName" required>
 
         </div>
+        <!-- LAST NAME -->
         <div class="w-full md:w-1/2 px-3">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="lastName">
                 Last Name
@@ -39,6 +38,7 @@ novalidate
                 id="lastName" name="lastName" type="text" placeholder="Doe" [(ngModel)]="user.lastName" required>
         </div>
     </div>
+    <!-- SECOND ROW -->
     <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="email">
@@ -46,8 +46,7 @@ novalidate
             </label>
             <input
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="email" name="email" type="text" placeholder="jesus@dachrist.com" [(ngModel)]="user.email"
-                required>
+                id="email" name="email" type="text" placeholder="jesus@dachrist.com" [(ngModel)]="user.email" required>
             <p class="text-gray-600 text-xs italic">Remember to keep it professional Sparkles</p>
         </div>
         <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
@@ -61,6 +60,7 @@ novalidate
             <p class="text-gray-600 text-xs italic">Make it as long and as crazy as you'd like</p>
         </div>
     </div>
+    <!-- THRID ROW -->
     <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="username">
@@ -84,6 +84,88 @@ novalidate
         </div>
     </div>
     <div class="flex flex-wrap -mx-3 mb-6">
+        <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="username">
+                City
+            </label>
+            <input
+                class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                id="userCity" name="userCity" type="text" placeholder="Hometown" [(ngModel)]="user.userCity"
+                required>
+            <p class="text-gray-600 text-xs italic">Where do you call home?</p>
+        </div>
+        <div class="w-full  md:w-1/2 px-3 mb-6 md:mb-0">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="password">
+                State
+            </label>
+            <div class="relative">
+                <select
+                    class="block appearance-none w-full bg-gray-200 border border-gray-500 shadow text-gray-700 py-3 px-4 mb-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
+                    id="userState" [(ngModel)]="user.userState"  name="userState" required>
+                    <option value="AL">Alabama</option>
+                    <option value="AK">Alaska</option>
+                    <option value="AZ">Arizona</option>
+                    <option value="AR">Arkansas</option>
+                    <option value="CA">California</option>
+                    <option value="CO">Colorado</option>
+                    <option value="CT">Connecticut</option>
+                    <option value="DE">Delaware</option>
+                    <option value="DC">District Of Columbia</option>
+                    <option value="FL">Florida</option>
+                    <option value="GA">Georgia</option>
+                    <option value="HI">Hawaii</option>
+                    <option value="ID">Idaho</option>
+                    <option value="IL">Illinois</option>
+                    <option value="IN">Indiana</option>
+                    <option value="IA">Iowa</option>
+                    <option value="KS">Kansas</option>
+                    <option value="KY">Kentucky</option>
+                    <option value="LA">Louisiana</option>
+                    <option value="ME">Maine</option>
+                    <option value="MD">Maryland</option>
+                    <option value="MA">Massachusetts</option>
+                    <option value="MI">Michigan</option>
+                    <option value="MN">Minnesota</option>
+                    <option value="MS">Mississippi</option>
+                    <option value="MO">Missouri</option>
+                    <option value="MT">Montana</option>
+                    <option value="NE">Nebraska</option>
+                    <option value="NV">Nevada</option>
+                    <option value="NH">New Hampshire</option>
+                    <option value="NJ">New Jersey</option>
+                    <option value="NM">New Mexico</option>
+                    <option value="NY">New York</option>
+                    <option value="NC">North Carolina</option>
+                    <option value="ND">North Dakota</option>
+                    <option value="OH">Ohio</option>
+                    <option value="OK">Oklahoma</option>
+                    <option value="OR">Oregon</option>
+                    <option value="PA">Pennsylvania</option>
+                    <option value="RI">Rhode Island</option>
+                    <option value="SC">South Carolina</option>
+                    <option value="SD">South Dakota</option>
+                    <option value="TN">Tennessee</option>
+                    <option value="TX">Texas</option>
+                    <option value="UT">Utah</option>
+                    <option value="VT">Vermont</option>
+                    <option value="VA">Virginia</option>
+                    <option value="WA">Washington</option>
+                    <option value="WV">West Virginia</option>
+                    <option value="WI">Wisconsin</option>
+                    <option value="WY">Wyoming</option>
+                </select>
+
+                <div
+                    class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
+                    <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                        <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
+                    </svg>
+                </div>
+                <p class="text-gray-600 text-xs italic">Select your State</p>
+            </div>
+        </div>
+    </div>
+    <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full  md:w-full  mb-6 md:mb-0">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="bio">
                 Bio
@@ -92,14 +174,15 @@ novalidate
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                 id="bio" name="bio" type="text" placeholder="" [(ngModel)]="user.bio"></textarea>
             <p class="text-gray-600 text-xs italic">Tell us about yourself</p>
-            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Submit</button>
+            <button type="submit"
+                class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Submit</button>
         </div>
     </div>
     <div *ngIf="f.submitted && isSignUpFailed">
         Signup failed!<br />{{ errorMessage }}
-      </div>
+    </div>
 </form>
 
 <div *ngIf="isSuccessful">
     Your registration is successful!
-  </div>
+</div>
