--- a/src/app/componets/home/home.component.html
+++ b/src/app/componets/home/home.component.html
@@ -6,7 +6,8 @@
   </agm-map> <!-- DIV FOR MAP -->
   
   <!-- This will have to end up being a loop to accomedate for the search/map results -->
-  <div class="absolute bg-white shadow-lg w-1/5 m-6 rounded-lg overflow-hidden"> <!-- ORG CARD -->
+  <!-- ORG CARD -->
+  <!-- <div class="absolute bg-white shadow-lg w-1/5 m-6 rounded-lg overflow-hidden"> 
     <img class="bg-h-40 bg-w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
     <div class="p-4">
       <div class="flex items-center">
@@ -20,7 +21,7 @@
       <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: Lorem ipsum dolor sit amet consectetur adipisicing
         elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 
