--- a/src/app/componets/sign-up/sign-up.component.html
+++ b/src/app/componets/sign-up/sign-up.component.html
@@ -9,7 +9,7 @@
             </label>
             <input
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
-                id="firstName" name="firstName" type="text" placeholder="Jane" [(ngModel)]="user.firstName" required>
+                id="firstName" name="firstName" type="text" placeholder="Jesus" [(ngModel)]="user.firstName" required>
 
         </div>
         <!-- LAST NAME -->
@@ -19,7 +19,7 @@
             </label>
             <input
                 class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                id="lastName" name="lastName" type="text" placeholder="Doe" [(ngModel)]="user.lastName" required>
+                id="lastName" name="lastName" type="text" placeholder="Christ" [(ngModel)]="user.lastName" required>
         </div>
     </div>
     <!-- SECOND ROW -->
@@ -86,6 +86,7 @@
                 <select
                     class="block appearance-none w-full bg-gray-200 border border-gray-500 shadow text-gray-700 py-3 px-4 mb-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                     id="userState" [(ngModel)]="user.userState"  name="userState" required>
+                    <option value="GL">Galilee</option>
                     <option value="AL">Alabama</option>
                     <option value="AK">Alaska</option>
                     <option value="AZ">Arizona</option>
