uncommenting out the map stuff for demo

--- a/src/app/componets/connect/connect.component.html
+++ b/src/app/componets/connect/connect.component.html
@@ -17,7 +17,7 @@
                         <!-- <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">
                             {{mission.MissionLocationCity}}<br>{{mission.MissionLocationCountry}}</div> -->
                             <span
-                            class="inline-block bg-gray-200 justify-end text-xs px-4 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Doing works in: <br> {{mission.MissionLocationCity}} {{mission.MissionLocationCountry}}</span>
+                            class="inline-block bg-gray-200 justify-end text-xs px-4 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Doing works in: <br> {{mission.MissionLocationCity}}, {{mission.MissionLocationCountry}}</span>
                     </div>
                     <div class="text-logo-800 font-semibold text-xs mt-2">{{mission.Bio}}</div>
                 </div>
